# CosmVerseFlex

./: .env  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.gradle.kts  cargo.toml  deduplicate  gradle_automation.bat  gradle_automation.sh  gradlew  pom.xml  preprocess_file  settings.gradle.kts
LESSONS/LESSON_1/: README.md
LESSONS/LESSON_2/: README.md
LESSONS/LESSON_3/: README.md
config/: logging.conf
scripts/: manage.sh
src/main/kotlin/com/base/: CsvDatabase.kt  FlexNet.kt  Unster.kt
src/main/kotlin/com/wallet/: Wallet.kt
src/main/resources/: logback.xml
src/main/resources/static/: home.html
src/main/rust/: build.rs  deduplicate.rs  lib.rs  preprocess_file.rs
src/main/rust/scripts/: indexing.sh  update_database.sh
