[package]
name = "FlexNet"
version = "0.1.0"
edition = "2021"

authors = ["Kit Baroness <kit@AcmeWerx.com>"]
description = "Dapp Stack for DDD"
repository = "https://github.com/cryptoversus-io/Dapp.git"
license = "MIT" 

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.5"
regex = "1.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger ="0.8"
dotenv = "0.15"
sha2 = "0.10"

[[bin]]
name = "my_binary"
path = "Development/src/main/rust/bin/my_binary.rs"

[lib]
name = "my_library"
path = "Development/src/main/rust/lib.rs"

workspace = { members = [ "crates", 
    "crates/",] }

[dev-dependencies]
actix-web = "4"

[build-dependencies]

[features]

